# GLViewer

./: .gitignore  CMakeLists.txt  RenderCallback.cpp  RenderCallback.h  lap.py  main.cpp  render.cpp  render.h  shader.h  shader.vs  test.py
assets/: ball_shader.vs  blur_edge.py  normal_shader.vs  shader.fs  shader.vs
cameras/: ArcBallCamera.cpp  FPSCamera.cpp  OrthoCamera.cpp
cmake/: FindOptiX.cmake  configure_movecmd.cmake  configure_optix.cmake
config/: conf.json
geometries/: Primitives.h  Triangulator.h
imgui/: CMakeLists.txt
src/: RenderCallback.cpp  render.cpp  render.h
src/cameras/: ArcBallCamera.h  CMakeLists.txt  CameraBase.cpp  CameraBase.h  CameraBuilder.cpp  CameraBuilder.h  FPSCamera.h  OrthoCamera.h
src/geometries/: CMakeLists.txt  Primitives.cpp  Triangulator.cpp
src/render/: CMakeLists.txt  RenderCallback.cpp  RenderImGui.cpp  RenderImGui.h  RenderResource.cpp  RenderResource.h  render.cpp  render.h  shader.h
src/restore/: CMakeLists.txt  png2pointcloud.cpp  png2pointcloud.h
src/sim_kinect/: CMakeLists.txt  SimKinect.cpp  SimKinect.h  sim_kinect_noise_pybind_export.cpp
src/utils/: CMakeLists.txt  FileUtil.cpp  GLUtil.h  ImageTextureHelper.cpp  JsonUtil.h  MathUtil.h  ObjUtil.cpp  ObjUtil.h  OpenCVUtil.cpp  OpenCVUtil.h  StringUtil.cpp  StringUtil.h  SysUtil.cpp  SysUtil.h  stb_image.h
src/utils/json/: CMakeLists.txt  config.h
utils/: CMakeLists.txt  DefUtil.h  FileUtil.h  JsonUtil.cpp  LogUtil.cpp  LogUtil.h  MathUtil.cpp  MathUtil2.cpp  Rand.cpp  Rand.h  TimeUtil.cpp  TimeUtil.hpp  stb_image_write.h
